--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
 <body>
   <div class="grid">
-    <div class="card purple">
+
+    <div class="card daniel">
+      <div class="quote-graphic">
+        <img src="images/bg-pattern-quotation.svg" alt="quote">
+      </div>
       <div class="flex-row">
         <div class="profile-picture"><img src="/images/image-daniel.jpg" alt="Daniel"></div>
         <div class="flex-col">
@@ -21,8 +25,8 @@
           <h3 class="verification">Verified Graduate</h3>
         </div>
       </div>
-
-      <h4 class="bold-text">I received a job offer mid-course, and the subjects I learned were current, if not more so,
+      <h4 class="bold-text front">I received a job offer mid-course, and the subjects I learned were current, if not
+        more so,
         in the company I joined. I honestly feel I got every penny’s worth.</h4>
       <p class="quote">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
         transition and have heard some people who had an amazing experience here. I signed up
@@ -31,7 +35,7 @@
         the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
     </div>
 
-    <div class="card gray-blue">
+    <div class="card jonathan">
       <div class="flex-row">
         <div class="profile-picture"><img src="/images/image-jonathan.jpg" alt="Jonathan"></div>
         <div class="flex-col">
@@ -39,13 +43,12 @@
           <h3 class="verification">Verified Graduate</h3>
         </div>
       </div>
-
       <h4 class="bold-text">The team was very supportive and kept me motivated</h4>
       <p class="quote">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
         for a big company. This was one of the best investments I’ve made in myself. ”</p>
     </div>
 
-    <div class="card white">
+    <div class="card white jeanette">
       <div class="flex-row">
         <div class="profile-picture"><img src="/images/image-jeanette.jpg" alt="Jeanette"></div>
         <div class="flex-col">
@@ -53,13 +56,12 @@
           <h3 class="verification">Verified Graduate</h3>
         </div>
       </div>
-
       <h4 class="bold-text">An overall wonderful and rewarding experience</h4>
       <p class="quote">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
         while doing something I love. ”</p>
     </div>
 
-    <div class="card black-blue">
+    <div class="card patrick">
       <div class="flex-row">
         <div class="profile-picture"><img src="/images/image-patrick.jpg" alt="Patrick"></div>
         <div class="flex-col">
@@ -67,7 +69,6 @@
           <h3 class="verification">Verified Graduate</h3>
         </div>
       </div>
-
       <h4 class="bold-text">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from
         them
         and
@@ -79,7 +80,7 @@
         an incredible community of smart and amazing people. ”</p>
     </div>
 
-    <div class="card white">
+    <div class="card white kira">
       <div class="flex-row">
         <div class="profile-picture"><img src="/images/image-kira.jpg" alt="Kira"></div>
         <div class="flex-col">
@@ -98,7 +99,6 @@
         100% recommend! ”</p>
     </div>
   </div>
-
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
