Fixed a discrepancy with the borders of the round purple profile pictures.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="images/bg-pattern-quotation.svg" alt="quote">
       </div>
       <div class="flex-row">
-        <div class="profile-picture"><img src="/images/image-daniel.jpg" alt="Daniel"></div>
+        <div class="profile-picture purp-border"><img src="/images/image-daniel.jpg" alt="Daniel"></div>
         <div class="flex-col">
           <h2 class="user">Daniel Clifford</h2>
           <h3 class="verification">Verified Graduate</h3>
@@ -63,7 +63,7 @@
 
     <div class="card patrick">
       <div class="flex-row">
-        <div class="profile-picture"><img src="/images/image-patrick.jpg" alt="Patrick"></div>
+        <div class="profile-picture purp-border"><img src="/images/image-patrick.jpg" alt="Patrick"></div>
         <div class="flex-col">
           <h2 class="user">Patrick Abrams</h2>
           <h3 class="verification">Verified Graduate</h3>
