Added defer to script.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         100% recommend! ”</p>
     </div>
   </div>
-  <script src="app.js"></script>
+  <script src="app.js" defer></script>
 </body>
 
 </html>
